--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -12,12 +12,12 @@ RUN apt update && \
 RUN update-alternatives --set x86_64-w64-mingw32-g++ $(which x86_64-w64-mingw32-g++-posix) && \
     update-alternatives --set x86_64-w64-mingw32-gcc $(which x86_64-w64-mingw32-gcc-posix)
 
-RUN git clone -b v0.18.4.3 --depth 1 https://github.com/monero-project/monero && \
-    cd monero && \
-    git reset --hard 7c6e84466a90f6701ebe09ff8f61ea8af3883181 && \
+RUN git clone -b v0.18.4.3 --depth 1 https://github.com/Xcash-Labs/xcash-labs-core && \
+    cd xcash-labs-core && \
+    git reset --hard 0391e365f578039bfdb075294e82e395a2f79db0 && \
     cp -a contrib/depends / && \
     cd .. && \
-    rm -rf monero
+    rm -rf xcash-labs-core
 
 RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 NO_QT=1
 
