--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -11,10 +11,9 @@ RUN apt update && \
 
 RUN update-alternatives --set x86_64-w64-mingw32-g++ $(which x86_64-w64-mingw32-g++-posix) && \
     update-alternatives --set x86_64-w64-mingw32-gcc $(which x86_64-w64-mingw32-gcc-posix)
-
-RUN git clone -b v0.18.4.3 --depth 1 https://github.com/Xcash-Labs/xcash-labs-core && \
+    
+RUN git clone --depth 1 https://github.com/Xcash-Labs/xcash-labs-core && \
     cd xcash-labs-core && \
-    git reset --hard 0391e365f578039bfdb075294e82e395a2f79db0 && \
     cp -a contrib/depends / && \
     cd .. && \
     rm -rf xcash-labs-core
