--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -20,9 +20,13 @@ RUN git clone --depth 1 https://github.com/Xcash-Labs/xcash-labs-core && \
 
 RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 NO_QT=1
 
-# Build OpenSSL into depends for the Windows target
-RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 openssl && \
-    test -f /depends/x86_64-w64-mingw32/include/openssl/ssl.h
+# Build OpenSSL into the same /depends prefix (needed for Qt HTTPS)
+RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 openssl
+
+# Fail early if it didn't actually install
+RUN test -f /depends/x86_64-w64-mingw32/include/openssl/ssl.h && \
+    test -f /depends/x86_64-w64-mingw32/lib/libssl.a && \
+    test -f /depends/x86_64-w64-mingw32/lib/libcrypto.a
 
 RUN git clone git://code.qt.io/qt/qt5.git -b ${QT_VERSION} --depth 1 && \
     cd qt5 && \
@@ -40,18 +44,19 @@ RUN git clone git://code.qt.io/qt/qt5.git -b ${QT_VERSION} --depth 1 && \
     export CPPFLAGS="-I/depends/x86_64-w64-mingw32/include" && \
     export LDFLAGS="-L/depends/x86_64-w64-mingw32/lib" && \
     export LIBS="-lssl -lcrypto" && \
+    export PKG_CONFIG_LIBDIR="/depends/x86_64-w64-mingw32/lib/pkgconfig" && \
+    export PKG_CONFIG_SYSROOT_DIR="/depends/x86_64-w64-mingw32" && \
     ./configure --prefix=/depends/x86_64-w64-mingw32 -xplatform win32-g++ \
     -device-option CROSS_COMPILE=/usr/bin/x86_64-w64-mingw32- \
     -I $(pwd)/qtbase/src/3rdparty/angle/include \
     -opensource -confirm-license -release -static -static-runtime -opengl dynamic -no-angle \
-    -no-avx -openssl-linked -no-sql-sqlite \
-    -no-feature-qml-worker-script -no-sql-sqlite \
+    -no-avx -openssl-linked -no-sql-sqlite -no-feature-qml-worker-script \
     -qt-freetype -qt-harfbuzz -qt-libjpeg -qt-libpng -qt-pcre -qt-zlib \
     -skip gamepad -skip location -skip qt3d -skip qtactiveqt -skip qtandroidextras \
     -skip qtcanvas3d -skip qtcharts -skip qtconnectivity -skip qtdatavis3d -skip qtdoc \
     -skip qtgamepad -skip qtlocation -skip qtmacextras -skip qtnetworkauth -skip qtpurchasing \
     -skip qtscript -skip qtscxml -skip qtsensors -skip qtserialbus -skip qtserialport \
-    -skip qtspeech -skip qttools -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel \
+    -skip qtspeech -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel \
     -skip qtwebengine -skip qtwebsockets -skip qtwebview -skip qtwinextras -skip qtx11extras \
     -skip serialbus -skip webengine \
     -nomake examples -nomake tests -nomake tools && \
@@ -62,7 +67,7 @@ RUN git clone git://code.qt.io/qt/qt5.git -b ${QT_VERSION} --depth 1 && \
     make -j$THREADS && \
     make -j$THREADS install && \
     cd ../../../.. && \
-    rm -rf $(pwd)
+    rm -rf qt5
 
 RUN git clone -b libgpg-error-1.38 --depth 1 git://git.gnupg.org/libgpg-error.git && \
     cd libgpg-error && \
