--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -41,12 +41,16 @@ RUN git clone git://code.qt.io/qt/qt5.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qttools.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qttranslations.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qtxmlpatterns.git -b ${QT_VERSION} --depth 1 && \
-    export CPPFLAGS="-I/depends/x86_64-w64-mingw32/include" && \
-    export LDFLAGS="-L/depends/x86_64-w64-mingw32/lib" && \
-    export LIBS="-lssl -lcrypto" && \
+    export OPENSSL_PREFIX="/depends/x86_64-w64-mingw32" && \
+    export QMAKE_INCDIR_OPENSSL="/depends/x86_64-w64-mingw32/include" && \
+    export QMAKE_LIBDIR_OPENSSL="/depends/x86_64-w64-mingw32/lib" && \
+    export QMAKE_LIBS_OPENSSL="-lssl -lcrypto" && \
+    export QMAKE_CFLAGS="-I/depends/x86_64-w64-mingw32/include" && \
+    export QMAKE_CXXFLAGS="-I/depends/x86_64-w64-mingw32/include" && \
+    export QMAKE_LFLAGS="-L/depends/x86_64-w64-mingw32/lib" && \
     export PKG_CONFIG_LIBDIR="/depends/x86_64-w64-mingw32/lib/pkgconfig" && \
     export PKG_CONFIG_SYSROOT_DIR="/depends/x86_64-w64-mingw32" && \
-    ./configure --prefix=/depends/x86_64-w64-mingw32 -xplatform win32-g++ \
+    ./configure --prefix=/depends/x86_64-w64-mingw32 -xplatform win32-g++ -pkg-config \
     -device-option CROSS_COMPILE=/usr/bin/x86_64-w64-mingw32- \
     -I $(pwd)/qtbase/src/3rdparty/angle/include \
     -opensource -confirm-license -release -static -static-runtime -opengl dynamic -no-angle \
