--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -20,6 +20,12 @@ RUN git clone --depth 1 https://github.com/Xcash-Labs/xcash-labs-core && \
 
 RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 NO_QT=1
 
+# Build zlib for the Windows target (fixes: cannot find -lz)
+RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 zlib
+
+# Fail early if zlib didn't install
+RUN test -f /depends/x86_64-w64-mingw32/lib/libz.a
+
 # Build OpenSSL into the same /depends prefix (needed for Qt HTTPS)
 RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 openssl
 
