--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -21,10 +21,10 @@ RUN git clone --depth 1 https://github.com/Xcash-Labs/xcash-labs-core && \
 RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 NO_QT=1
 
 # Build zlib for the Windows target (fixes: cannot find -lz)
-RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 zlib
+#RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 zlib
 
 # Fail early if zlib didn't install
-RUN test -f /depends/x86_64-w64-mingw32/lib/libz.a
+#RUN test -f /depends/x86_64-w64-mingw32/lib/libz.a
 
 # Build OpenSSL into the same /depends prefix (needed for Qt HTTPS)
 RUN make -j$THREADS -C /depends HOST=x86_64-w64-mingw32 openssl
@@ -51,7 +51,7 @@ RUN git clone git://code.qt.io/qt/qt5.git -b ${QT_VERSION} --depth 1 && \
     git clone git://code.qt.io/qt/qtxmlpatterns.git -b ${QT_VERSION} --depth 1 && \
     export CPPFLAGS="-I/depends/x86_64-w64-mingw32/include" && \
     export LDFLAGS="-L/depends/x86_64-w64-mingw32/lib" && \
-    export OPENSSL_LIBS="-lssl -lcrypto -lws2_32 -lcrypt32 -lbcrypt -ladvapi32 -luser32 -lgdi32 -lz" && \
+    export OPENSSL_LIBS="-lssl -lcrypto -lws2_32 -lcrypt32 -lbcrypt -ladvapi32 -luser32 -lgdi32" && \
     export QMAKE_INCDIR_OPENSSL="/depends/x86_64-w64-mingw32/include" && \
     export QMAKE_LIBDIR_OPENSSL="/depends/x86_64-w64-mingw32/lib" && \
     export QMAKE_LIBS_OPENSSL="$OPENSSL_LIBS" && \
