--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -64,7 +64,7 @@ printf '#include <openssl/ssl.h>\nint main(){return 0;}\n' > /tmp/t.c && \
 /usr/bin/x86_64-w64-mingw32-gcc /tmp/t.c \
   -I/depends/x86_64-w64-mingw32/include \
   -L/depends/x86_64-w64-mingw32/lib \
-  -lssl -lcrypto -lws2_32 -lcrypt32 -lbcrypt -ladvapi32 -luser32 -lgdi32 -lz \
+  -lssl -lcrypto -lws2_32 -lcrypt32 -lbcrypt -ladvapi32 -luser32 -lgdi32 \
   -o /tmp/t.exe && \
 echo "OPENSSL LINK TEST OK" && \
     ./configure --prefix=/depends/x86_64-w64-mingw32 -xplatform win32-g++ -pkg-config \
