--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -5,7 +5,7 @@ ARG QT_VERSION=v5.15.17-lts-lgpl
 
 ENV CFLAGS="-fPIC"
 ENV CPPFLAGS="-fPIC"
-ENV CXXFLAGS="-fPIC -std=gnu++17"
+ENV CXXFLAGS="-fPIC"
 ENV SOURCE_DATE_EPOCH=1397818193
 
 RUN apt update && \
