--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,11 +1,11 @@
-FROM ubuntu:20.04
+FROM ubuntu:18.04
 
 ARG THREADS=1
 ARG QT_VERSION=v5.15.17-lts-lgpl
 
 ENV CFLAGS="-fPIC"
 ENV CPPFLAGS="-fPIC"
-ENV CXXFLAGS="-fPIC"
+ENV CXXFLAGS="-fPIC -std=gnu++17"
 ENV SOURCE_DATE_EPOCH=1397818193
 
 RUN apt update && \
