--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -11,9 +11,12 @@ ENV CXXFLAGS="-fPIC"
 ENV SOURCE_DATE_EPOCH=1397818193
 
 RUN apt update && \
-    apt install -y tzdata automake autopoint bison gettext git gperf libgl1-mesa-dev libglib2.0-dev \
+    DEBIAN_FRONTEND=noninteractive apt install -y \
+    build-essential \
+    automake autopoint bison gettext git gperf libgl1-mesa-dev libglib2.0-dev \
     libpng-dev libpthread-stubs0-dev libsodium-dev libtool-bin libudev-dev libusb-1.0-0-dev mesa-common-dev \
-    pkg-config python wget xutils-dev libssl-dev ca-certificates
+    pkg-config python wget xutils-dev libssl-dev ca-certificates tzdata && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN git clone -b xorgproto-2020.1 --depth 1 https://gitlab.freedesktop.org/xorg/proto/xorgproto && \
     cd xorgproto && \
