--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -16,7 +16,7 @@ RUN apt update && \
     automake autopoint bison gettext git gperf libgl1-mesa-dev libglib2.0-dev \
     libpng-dev libpthread-stubs0-dev libsodium-dev libtool-bin libudev-dev libusb-1.0-0-dev mesa-common-dev \
     pkg-config python wget xutils-dev libssl-dev ca-certificates tzdata \
-    libx11-dev libxext-dev libx11-xcb-dev libxcb-xlib0-dev && \
+    libx11-dev libxext-dev libx11-xcb-dev libxcb1-dev libxcb-xlib0 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN git clone -b xorgproto-2020.1 --depth 1 https://gitlab.freedesktop.org/xorg/proto/xorgproto && \
