--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -13,6 +13,7 @@ ENV SOURCE_DATE_EPOCH=1397818193
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive apt install -y \
     build-essential \
+    xcb-proto python3-xcbgen \
     automake autopoint bison gettext git gperf libgl1-mesa-dev libglib2.0-dev \
     libpng-dev libpthread-stubs0-dev libsodium-dev libtool-bin libudev-dev libusb-1.0-0-dev mesa-common-dev \
     pkg-config python3 python-is-python3 wget xutils-dev \
@@ -43,6 +44,8 @@ RUN git clone -b libXau-1.0.9 --depth 1 https://gitlab.freedesktop.org/xorg/lib/
     make -j$THREADS && \
     make -j$THREADS install && \
     rm -rf $(pwd)
+
+RUN rm -f /usr/local/lib/pkgconfig/xcb-proto.pc || true
 
 RUN git clone -b 1.12 --depth 1 https://gitlab.freedesktop.org/xorg/lib/libxcb && \
     cd libxcb && \
