--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -62,14 +62,12 @@ RUN git clone -b v1.3 --depth 1 https://github.com/madler/zlib && \
     make -j$THREADS install && \
     rm -rf $(pwd)
 
-RUN git clone -b VER-2-10-2 --depth 1 https://gitlab.freedesktop.org/freetype/freetype.git && \
-    cd freetype && \
-    git reset --hard 132f19b779828b194b3fede187cee719785db4d8 && \
-    ./autogen.sh && \
+RUN wget -qO /tmp/freetype.tar.gz https://download.savannah.gnu.org/releases/freetype/freetype-2.10.2.tar.gz && \
+    cd /tmp && tar -xzf freetype.tar.gz && cd freetype-2.10.2 && \
     ./configure --disable-shared --enable-static --with-zlib=no && \
-    make -j$THREADS && \
-    make -j$THREADS install && \
-    rm -rf $(pwd)
+    make -j$THREADS && make install && \
+    ldconfig && \
+    cd / && rm -rf /tmp/freetype* 
 
 RUN wget https://github.com/libexpat/libexpat/releases/download/R_2_4_8/expat-2.4.8.tar.bz2 && \
     echo "a247a7f6bbb21cf2ca81ea4cbb916bfb9717ca523631675f99b3d4a5678dcd16 expat-2.4.8.tar.bz2" | sha256sum -c && \
