--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -104,15 +104,16 @@ RUN wget https://archives.boost.io/release/1.80.0/source/boost_1_80_0.tar.gz && 
     ./b2 --with-atomic --with-system --with-filesystem --with-thread --with-date_time --with-chrono --with-regex --with-serialization --with-program_options --with-locale variant=release link=static runtime-link=static cflags="${CFLAGS}" cxxflags="${CXXFLAGS}" install -a --prefix=/usr && \
     rm -rf $(pwd)
 
-RUN wget https://www.openssl.org/source/openssl-1.1.1u.tar.gz && \
-    echo "e2f8d84b523eecd06c7be7626830370300fbcc15386bf5142d72758f6963ebc6 openssl-1.1.1u.tar.gz" | sha256sum -c && \
-    tar -xzf openssl-1.1.1u.tar.gz && \
-    rm openssl-1.1.1u.tar.gz && \
-    cd openssl-1.1.1u && \
-    ./config no-shared no-zlib-dynamic --prefix=/usr --openssldir=/usr && \
+RUN wget https://www.openssl.org/source/openssl-3.0.13.tar.gz && \
+    echo "88525753f79d3bec27d2c8b2d021c6d4e56ecb3f989c1f3f5b2c2e3a5b1f6f0d openssl-3.0.13.tar.gz" | sha256sum -c && \
+    tar -xzf openssl-3.0.13.tar.gz && \
+    rm openssl-3.0.13.tar.gz && \
+    cd openssl-3.0.13 && \
+    ./Configure linux-x86_64 no-shared no-zlib --prefix=/usr --openssldir=/usr && \
     make -j$THREADS && \
-    make -j$THREADS install && \
-    rm -rf $(pwd)
+    make install_sw install_ssldirs && \
+    ldconfig && \
+    cd / && rm -rf /openssl-3.0.13
 
 RUN wget https://www.nlnetlabs.nl/downloads/unbound/unbound-1.16.2.tar.gz && \
     echo "2e32f283820c24c51ca1dd8afecfdb747c7385a137abe865c99db4b257403581 unbound-1.16.2.tar.gz" | sha256sum -c && \
