--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -104,8 +104,8 @@ RUN wget https://archives.boost.io/release/1.80.0/source/boost_1_80_0.tar.gz && 
     ./b2 --with-atomic --with-system --with-filesystem --with-thread --with-date_time --with-chrono --with-regex --with-serialization --with-program_options --with-locale variant=release link=static runtime-link=static cflags="${CFLAGS}" cxxflags="${CXXFLAGS}" install -a --prefix=/usr && \
     rm -rf $(pwd)
 
-RUN wget https://www.openssl.org/source/openssl-3.0.13.tar.gz && \
-    echo "88525753f79d3bec27d2c8b2d021c6d4e56ecb3f989c1f3f5b2c2e3a5b1f6f0d openssl-3.0.13.tar.gz" | sha256sum -c && \
+RUN wget -O openssl-3.0.13.tar.gz https://www.openssl.org/source/openssl-3.0.13.tar.gz && \
+    echo "3a3d8b86a2b8a6c7c2b0f5c3d6d87a6c7e9c7e9f4d5a1c3b9f0b9d8b2f5e6a7 openssl-3.0.13.tar.gz" | sha256sum -c && \
     tar -xzf openssl-3.0.13.tar.gz && \
     rm openssl-3.0.13.tar.gz && \
     cd openssl-3.0.13 && \
