--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -104,8 +104,9 @@ RUN wget https://archives.boost.io/release/1.80.0/source/boost_1_80_0.tar.gz && 
     ./b2 --with-atomic --with-system --with-filesystem --with-thread --with-date_time --with-chrono --with-regex --with-serialization --with-program_options --with-locale variant=release link=static runtime-link=static cflags="${CFLAGS}" cxxflags="${CXXFLAGS}" install -a --prefix=/usr && \
     rm -rf $(pwd)
 
-RUN wget -O openssl-3.0.13.tar.gz https://github.com/openssl/openssl/releases/download/openssl-3.0.13/openssl-3.0.13.tar.gz && \
-    echo "88525753f79d3bec27d2c8b2d021c6d4e56ecb3f989c1f3f5b2c2e3a5b1f6f0d  openssl-3.0.13.tar.gz" | sha256sum -c - && \
+RUN wget --max-redirect=20 -O openssl-3.0.13.tar.gz \
+    https://github.com/openssl/openssl/releases/download/openssl-3.0.13/openssl-3.0.13.tar.gz && \
+    echo "88525753f79d3bec27d2fa7c66aa0b92b3aa9498dafd93d7cfa4b3780cdae313  openssl-3.0.13.tar.gz" | sha256sum -c - && \
     tar -xzf openssl-3.0.13.tar.gz && \
     rm openssl-3.0.13.tar.gz && \
     cd openssl-3.0.13 && \
