--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -16,7 +16,7 @@ RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y \
     libgl1-mesa-dev mesa-common-dev libglib2.0-dev libpng-dev libpthread-stubs0-dev \
     libsodium-dev libudev-dev libusb-1.0-0-dev libssl-dev \
     xcb-proto libx11-dev libxext-dev libx11-xcb-dev libxau-dev libxdmcp-dev \
-    libxcb1-dev libxcb-glx0-dev libxcb-util0-dev libxcb-image0-dev libxcb-keysyms1-dev \
+    libxcb1-dev libxcb-glx0-dev libxcb-util-dev libxcb-image0-dev libxcb-keysyms1-dev \
     libxcb-render-util0-dev libxcb-icccm4-dev libxcb-ewmh-dev libxcb-xinerama0-dev \
     libxcb-shape0-dev libxcb-randr0-dev libxcb-shm0-dev libxcb-sync-dev \
     libxcb-xfixes0-dev libxcb-xkb-dev libxkbcommon-dev libxkbcommon-x11-dev \
