--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,7 +193,7 @@ if(UNIX AND NOT APPLE AND NOT ANDROID)
     message(STATUS "X11_INCLUDE_DIR = ${X11_INCLUDE_DIR}")
     message(STATUS "X11_LIBRARIES = ${X11_LIBRARIES}")
     include_directories(${X11_INCLUDE_DIR})
-    link_directories(${X11_LIBRARIES})
+    # link_directories(${X11_LIBRARIES})
     if(STATIC)
         find_library(XCB_LIBRARY xcb)
         message(STATUS "Found xcb library: ${XCB_LIBRARY}")
@@ -281,7 +281,9 @@ if(QT5_PKG_CONFIG_FOUND)
     STRING(REPLACE "${QT5_PKG_CONFIG_Qt5Core_PREFIX}" "${QT_INSTALL_PREFIX}" ${QT5_PKG_CONFIG}_LIBRARY_DIRS "${${QT5_PKG_CONFIG}_LIBRARY_DIRS}")
   endif()
 
-  set(QT5_LIBRARIES ${${QT5_PKG_CONFIG}_LIBRARIES} ${${QT5_PKG_CONFIG}_LDFLAGS_OTHER})
+  if(NOT STATIC)
+    set(QT5_LIBRARIES ${${QT5_PKG_CONFIG}_LIBRARIES} ${${QT5_PKG_CONFIG}_LDFLAGS_OTHER})
+  endif()
   include_directories(${${QT5_PKG_CONFIG}_INCLUDE_DIRS})
   link_directories(${${QT5_PKG_CONFIG}_LIBRARY_DIRS})
 endif()
@@ -388,10 +390,13 @@ if(STATIC)
   endforeach()
 
   if(UNIX AND NOT APPLE)
-    pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
-    list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_LIBRARIES})
-    pkg_check_modules(FONTCONFIG REQUIRED fontconfig)
-    list(APPEND QT5_LIBRARIES ${FONTCONFIG_STATIC_LIBRARIES})
+    if(STATIC)
+      pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
+      list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_STATIC_LIBRARIES})
+    else()
+      pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
+      list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_LIBRARIES})
+    endif()
   endif()
 endif()
 
