--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -390,14 +390,12 @@ if(STATIC)
   endforeach()
 
   if(UNIX AND NOT APPLE)
-    if(STATIC)
-      pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
-      list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_STATIC_LIBRARIES})
-    else()
-      pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
-      list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_LIBRARIES})
-    endif()
+    pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
+    list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_LIBRARIES})
+    pkg_check_modules(FONTCONFIG REQUIRED fontconfig)
+    list(APPEND QT5_LIBRARIES ${FONTCONFIG_STATIC_LIBRARIES})
   endif()
+  
 endif()
 
 if(ANDROID)
